# Federated-Learning

./: kenny_key.pem
fl-nextpred/: Dockerfile  pyproject.toml  requriment.txt
fl-nextpred/None/.flwr/apps/peanutmonster.fl-nextpred.1.0.0.73c32728/: README.md  pyproject.toml
fl-nextpred/None/.flwr/apps/peanutmonster.fl-nextpred.1.0.0.73c32728/fl_nextpred/: Untitled-1.py  __init__.py  client_app.py  model.py  server_app.py
fl-nextpred/None/.flwr/apps/peanutmonster.fl-nextpred.1.0.0.73c32728/fl_nextpred/utils/: path_finder.py
fl-nextpred/fl_nextpred/: client.py  init_tokeniizer.py  main.py  model.py  server.py
fl-nextpred/fl_nextpred/configs/: config.json
fl-nextpred/fl_nextpred/model/: tokenizer.pkl
fl-nextpred/fl_nextpred/utils/: __init__.py  path_finder.py
noteapp/: CMakeLists.txt  main.cpp
